tenzir/tests/exec/functions/string/pad_left_multi_char_error.tql
// error: true
from {
  // Multi-character pad should fail at parse time
  multi_pad: "test".pad_left(10, "ab")
}